[POM-495] fix for cropped separators in breadcrumbs

--- a/src/app/shared/components/breadcrumbs/breadcrumb/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumbs/breadcrumb/breadcrumb.component.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
   &-item {
-    margin-top: 4px;
+    margin: 1px;
     font-size: 13px;
     letter-spacing: -0.1px;
     font-family: var(--font-open-sans);
